--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a class="nav_block_content" href="#" >Gallery</a>
                 <div></div>
             </div>
-            <img src="image/logo.png" alt="logo">
+            <img class="nav_img" src="image/logo.png" alt="logo">
             <div class="nav_block">
                 <a class="nav_block_content" href="#" >Blog</a>
                 <a class="nav_block_content" href="#" >Contact</a>
@@ -31,7 +31,6 @@
                 </button>
             </div>
         </nav>
-
 </header>
 
 
