--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
+    <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
+
 </head>
 <body>
 <header class="header">
@@ -33,7 +38,53 @@
         </nav>
 </header>
 
+<section class="slider">
+    <div class="swiper">
 
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="swiper_block">
+                    <div class="swiper_img">
+                        <img src="image/home/slider/slide1.png" alt="slide_photo">
+                    </div>
+                    <div class="swiper_content">
+                        <div class="swiper_title">Furniture collection</div>
+                        <hr class="swiper_hr">
+                        <div class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="swiper_block">
+                    <div class="swiper_img">
+                        <img src="image/home/slider/slide1.png" alt="slide_photo">
+                    </div>
+                    <div class="swiper_content">
+                        <div class="swiper_title">Furniture collection</div>
+                        <hr class="swiper_hr">
+                        <div class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="swiper_block">
+                    <div class="swiper_img">
+                        <img src="image/home/slider/slide1.png" alt="slide_photo">
+                    </div>
+                    <div class="swiper_content">
+                        <div class="swiper_title">Furniture collection</div>
+                        <hr class="swiper_hr">
+                        <div class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="swiper-pagination"></div>
+    </div>
+</section>
+
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script src="JavaScript/Main.js"></script>
 </body>
 </html>
