--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                         <img src="image/home/slider/slide1.png" alt="slide_photo">
                     </div>
                     <div class="swiper_content">
-                        <div class="swiper_title">Furniture collection</div>
+                        <h1 class="swiper_title">Furniture collection</h1>
                         <hr class="swiper_hr">
-                        <div class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</div>
+                        <p class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
                     </div>
                 </div>
             </div>
@@ -60,9 +60,9 @@
                         <img src="image/home/slider/slide1.png" alt="slide_photo">
                     </div>
                     <div class="swiper_content">
-                        <div class="swiper_title">Furniture collection</div>
+                        <h1 class="swiper_title">Furniture collection</h1>
                         <hr class="swiper_hr">
-                        <div class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</div>
+                        <p class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
                     </div>
                 </div>
             </div>
@@ -72,15 +72,72 @@
                         <img src="image/home/slider/slide1.png" alt="slide_photo">
                     </div>
                     <div class="swiper_content">
-                        <div class="swiper_title">Furniture collection</div>
+                        <h1 class="swiper_title">Furniture collection</h1>
                         <hr class="swiper_hr">
-                        <div class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</div>
+                        <p class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="swiper-pagination"></div>
     </div>
+</section>
+
+<section class="furniture">
+
+    <div class="furniture_info">
+        <h2 class="furniture_info_title">Furniture new collection</h2>
+        <hr class="furniture_info_hr">
+        <p class="furniture_info_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
+    </div>
+    <div class="furniture_content">
+        <div class="furniture_img_block">
+            <img class="furniture_img" src="image/home/furniture/furniture1.jpg" alt="furniture">
+            <div class="furniture_white"></div>
+            <div class="furniture_img_hover">
+                <div class="furniture_img_title">Truffaut literally trust</div>
+                <hr class="furniture_hr_img">
+                <div class="furniture_img_text">Living room furniture | Chair</div>
+            </div>
+        </div>
+        <div class="furniture_img_block">
+            <img class="furniture_img" src="image/home/furniture/furniture2.jpg" alt="furniture">
+            <div class="furniture_white"></div>
+            <div class="furniture_img_hover">
+                <div class="furniture_img_title">Truffaut literally trust</div>
+                <hr class="furniture_hr_img">
+                <div class="furniture_img_text">Living room furniture | Chair</div>
+            </div>
+        </div>
+        <div class="furniture_img_block">
+            <img class="furniture_img" src="image/home/furniture/furniture3.jpg" alt="furniture">
+            <div class="furniture_white"></div>
+            <div class="furniture_img_hover">
+                <div class="furniture_img_title">Truffaut literally trust</div>
+                <hr class="furniture_hr_img">
+                <div class="furniture_img_text">Living room furniture | Chair</div>
+            </div>
+        </div>
+        <div class="furniture_img_block">
+            <img class="furniture_img" src="image/home/furniture/furniture4.jpg" alt="furniture">
+            <div class="furniture_white"></div>
+            <div class="furniture_img_hover">
+                <div class="furniture_img_title">Truffaut literally trust</div>
+                <hr class="furniture_hr_img">
+                <div class="furniture_img_text">Living room furniture | Chair</div>
+            </div>
+        </div>
+        <div class="furniture_img_block">
+            <img class="furniture_img" src="image/home/furniture/furniture5.jpg" alt="furniture">
+            <div class="furniture_white"></div>
+            <div class="furniture_img_hover">
+                <div class="furniture_img_title">Truffaut literally trust</div>
+                <hr class="furniture_hr_img">
+                <div class="furniture_img_text">Living room furniture | Chair</div>
+            </div>
+        </div>
+    </div>
+
 </section>
 
 
