--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <img src="image/home/slider/slide1.png" alt="slide_photo">
                     </div>
                     <div class="swiper_content">
-                        <h1 class="swiper_title">Furniture collection</h1>
+                        <h1 class="swiper_title title">Furniture collection</h1>
                         <hr class="swiper_hr">
                         <p class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
                     </div>
@@ -60,7 +60,7 @@
                         <img src="image/home/slider/slide1.png" alt="slide_photo">
                     </div>
                     <div class="swiper_content">
-                        <h1 class="swiper_title">Furniture collection</h1>
+                        <h1 class="swiper_title title">Furniture collection</h1>
                         <hr class="swiper_hr">
                         <p class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
                     </div>
@@ -72,7 +72,7 @@
                         <img src="image/home/slider/slide1.png" alt="slide_photo">
                     </div>
                     <div class="swiper_content">
-                        <h1 class="swiper_title">Furniture collection</h1>
+                        <h1 class="swiper_title title">Furniture collection</h1>
                         <hr class="swiper_hr">
                         <p class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
                     </div>
@@ -86,7 +86,7 @@
 <section class="furniture">
 
     <div class="furniture_info">
-        <h2 class="furniture_info_title">Furniture new collection</h2>
+        <h2 class="furniture_info_title title">Furniture new collection</h2>
         <hr class="furniture_info_hr">
         <p class="furniture_info_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
     </div>
@@ -95,8 +95,7 @@
             <img class="furniture_img" src="image/home/furniture/furniture1.jpg" alt="furniture">
             <div class="furniture_white"></div>
             <div class="furniture_img_hover">
-                <div class="furniture_img_title">Truffaut literally trust</div>
-                <hr class="furniture_hr_img">
+                <div class="furniture_img_title title">Truffaut literally trust</div>
                 <div class="furniture_img_text">Living room furniture | Chair</div>
             </div>
         </div>
@@ -104,8 +103,7 @@
             <img class="furniture_img" src="image/home/furniture/furniture2.jpg" alt="furniture">
             <div class="furniture_white"></div>
             <div class="furniture_img_hover">
-                <div class="furniture_img_title">Truffaut literally trust</div>
-                <hr class="furniture_hr_img">
+                <div class="furniture_img_title title">Truffaut literally trust</div>
                 <div class="furniture_img_text">Living room furniture | Chair</div>
             </div>
         </div>
@@ -113,8 +111,7 @@
             <img class="furniture_img" src="image/home/furniture/furniture3.jpg" alt="furniture">
             <div class="furniture_white"></div>
             <div class="furniture_img_hover">
-                <div class="furniture_img_title">Truffaut literally trust</div>
-                <hr class="furniture_hr_img">
+                <div class="furniture_img_title title">Truffaut literally trust</div>
                 <div class="furniture_img_text">Living room furniture | Chair</div>
             </div>
         </div>
@@ -122,8 +119,7 @@
             <img class="furniture_img" src="image/home/furniture/furniture4.jpg" alt="furniture">
             <div class="furniture_white"></div>
             <div class="furniture_img_hover">
-                <div class="furniture_img_title">Truffaut literally trust</div>
-                <hr class="furniture_hr_img">
+                <div class="furniture_img_title title">Truffaut literally trust</div>
                 <div class="furniture_img_text">Living room furniture | Chair</div>
             </div>
         </div>
@@ -131,14 +127,78 @@
             <img class="furniture_img" src="image/home/furniture/furniture5.jpg" alt="furniture">
             <div class="furniture_white"></div>
             <div class="furniture_img_hover">
-                <div class="furniture_img_title">Truffaut literally trust</div>
-                <hr class="furniture_hr_img">
+                <div class="furniture_img_title title">Truffaut literally trust</div>
                 <div class="furniture_img_text">Living room furniture | Chair</div>
             </div>
         </div>
     </div>
-
 </section>
+
+<section class="decor">
+    <div class="container">
+        <div class="decor_content">
+            <div class="decor_title">Aesthetic ethical drinking</div>
+            <p class="decor_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Artlyft ethical the one drinking vinegar austint</p>
+        </div>
+    </div>
+</section>
+
+
+<section class="works_path">
+    <div class="container">
+        <div class="works_path_content">
+
+            <div class="works_title"><div class="title">How it works</div></div>
+
+
+            <div class="works_path_container">
+                <div class="works_path_box">
+                    <div class="works_path_block">
+                        <div class="works_path_img">
+                            <img src="image/home/works_path/Designer.svg" alt="icon">
+                        </div>
+                        <div class="works_path_title title">Designer Consultation</div>
+                        <div class="works_path_text">Kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche</div>
+                    </div>
+                </div>
+                <div class="works_path_box works_path_box_after_line_standard">
+                    <div class="works_path_block">
+                        <div class="works_path_img">
+                            <img src="image/home/works_path/Production.svg" alt="icon">
+                        </div>
+                        <div class="works_path_title title">Production</div>
+                        <div class="works_path_text">Everyday carry actually neutra authentic kogi shabby chic</div>
+                    </div>
+                </div>
+            </div>
+            <div class="works_path_line"></div>
+
+            <div class="works_path_container">
+                <div class="works_path_box works_path_box_after_line_reverse works_right">
+                    <div class="works_path_block">
+                        <div class="works_path_img">
+                            <img src="image/home/works_path/Measurements.svg" alt="icon">
+                        </div>
+                        <div class="works_path_title title">Measurements</div>
+                        <div class="works_path_text">Intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche</div>
+                    </div>
+                </div>
+                <div class="works_path_box works_right">
+                    <div class="works_path_block">
+                        <div class="works_path_img">
+                            <img src="image/home/works_path/Delivery.svg" alt="icon">
+                        </div>
+                        <div class="works_path_title title">Delivery and Assembley</div>
+                        <div class="works_path_text">Fanny pack church-key cornhole, banh mi thundercats gochujang keytar</div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
