--- a/Home.html
+++ b/Home.html
@@ -6,8 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" sizes="92x92" href="Favicon/1111111.png">
-    <title> Test</title>
-    <link rel="StyleSheet" href="Style/Style.css">
+    <title>Home</title>
+    <link rel="StyleSheet" href="Style/Home/Home.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,17 +23,16 @@
 <header class="header">
         <nav class="nav">
             <div class="nav_block">
-                <a class="nav_block_content" href="#" >About</a>
+                <a class="nav_block_content" href="/About.html" >About</a>
                 <a class="nav_block_content" href="#" >Gallery</a>
-                <div></div>
             </div>
-            <img class="nav_img" src="image/logo.png" alt="logo">
+            <a class="nav_img" href="/Home.html"><img src="image/logo.png" alt="logo"></a>
             <div class="nav_block">
                 <a class="nav_block_content" href="#" >Blog</a>
                 <a class="nav_block_content" href="#" >Contact</a>
-                <button class="burger">
+                <a href="/Home.html" class="burger">
                     <img src="image/icon_menu.svg" class="burger_svg" alt="burger">
-                </button>
+                </a>
             </div>
         </nav>
 </header>
@@ -196,27 +195,80 @@
 
 <section class="works">
     <div class="container_fluids">
+        <div class="tabs">
 
-        <nav class="works_nav">
-            <button class="works_nav_link">Bedroom furniture</button>
-            <button class="works_nav_link active">Living room furniture</button>
-            <button class="works_nav_link">Office furniture</button>
-            <button class="works_nav_link">Dining room furniture</button>
-            <button class="works_nav_link">Chair</button>
-        </nav>
+            <nav class="works_nav">
+                <button class="works_nav_link">Bedroom furniture</button>
+                <button class="works_nav_link active">Living room furniture</button>
+                <button class="works_nav_link">Office furniture</button>
+                <button class="works_nav_link">Dining room furniture</button>
+                <button class="works_nav_link">Chair</button>
+            </nav>
+            <div class="tabs_content">
 
-        <div class="works_block">
-            <div class="works_big_block">
-                <img class="works_img" src="image/home/works/big_image.jpg" alt="works">
+                <div class="works_block">
+                    <div class="works_big_block">
+                        <img class="works_img" src="image/home/works/big_image.jpg" alt="works">
+                    </div>
+                    <div class="works_small_block">
+                        <img class="works_img" src="image/home/works/small_img_1.jpg" alt="works">
+                        <img class="works_img" src="image/home/works/small_img_2.jpg" alt="works">
+                        <img class="works_img" src="image/home/works/small_img_3.jpg" alt="works">
+                        <img class="works_img" src="image/home/works/small_img_4.jpg" alt="works">
+                    </div>
+                </div>
+
+                <div class="works_block active">
+                    <div class="works_big_block">
+                        <img class="works_img" src="image/home/works/big_image.jpg" alt="works">
+                    </div>
+                        <div class="works_small_block">
+                            <img class="works_img" src="image/home/works/small_img_1.jpg" alt="works">
+                            <img class="works_img" src="image/home/works/small_img_3.jpg" alt="works">
+                            <img class="works_img" src="image/home/works/small_img_4.jpg" alt="works">
+                            <img class="works_img" src="image/home/works/small_img_2.jpg" alt="works">
+                        </div>
+                </div>
+
+                <div class="works_block">
+                    <div class="works_big_block">
+                        <img class="works_img" src="image/home/works/big_image.jpg" alt="works">
+                    </div>
+                    <div class="works_small_block">
+                        <img class="works_img" src="image/home/works/small_img_1.jpg" alt="works">
+                        <img class="works_img" src="image/home/works/small_img_4.jpg" alt="works">
+                        <img class="works_img" src="image/home/works/small_img_2.jpg" alt="works">
+                        <img class="works_img" src="image/home/works/small_img_3.jpg" alt="works">
+                    </div>
+                </div>
+
+                <div class="works_block">
+                    <div class="works_big_block">
+                        <img class="works_img" src="image/home/works/big_image.jpg" alt="works">
+                    </div>
+                    <div class="works_small_block">
+                        <img class="works_img" src="image/home/works/small_img_4.jpg" alt="works">
+                        <img class="works_img" src="image/home/works/small_img_1.jpg" alt="works">
+                        <img class="works_img" src="image/home/works/small_img_2.jpg" alt="works">
+                        <img class="works_img" src="image/home/works/small_img_3.jpg" alt="works">
+                    </div>
+                </div>
+
+                <div class="works_block">
+                    <div class="works_big_block">
+                        <img class="works_img" src="image/home/works/big_image.jpg" alt="works">
+                    </div>
+                    <div class="works_small_block">
+                        <img class="works_img" src="image/home/works/small_img_3.jpg" alt="works">
+                        <img class="works_img" src="image/home/works/small_img_1.jpg" alt="works">
+                        <img class="works_img" src="image/home/works/small_img_2.jpg" alt="works">
+                        <img class="works_img" src="image/home/works/small_img_4.jpg" alt="works">
+                    </div>
+                </div>
+
             </div>
-            <div class="works_small_block">
-                <img class="works_img" src="image/home/works/small_img_1.jpg" alt="works">
-                <img class="works_img" src="image/home/works/small_img_2.jpg" alt="works">
-                <img class="works_img" src="image/home/works/small_img_3.jpg" alt="works">
-                <img class="works_img" src="image/home/works/small_img_4.jpg" alt="works">
-            </div>
+
         </div>
-
     </div>
 </section>
 
