--- a/Home.html
+++ b/Home.html
@@ -38,102 +38,107 @@
 </header>
 
 <section class="slider">
-    <div class="swiper">
+    <div class="container_fluid">
+        <div class="swiper">
 
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <div class="swiper_block">
-                    <div class="swiper_img">
-                        <img src="image/home/slider/slide1.png" alt="slide_photo">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="swiper_block">
+                        <div class="swiper_img">
+                            <img src="image/home/slider/slide1.png" alt="slide_photo">
+                        </div>
+                        <div class="swiper_content">
+                            <h1 class="swiper_title title">Furniture collection</h1>
+                            <p class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
+                        </div>
                     </div>
-                    <div class="swiper_content">
-                        <h1 class="swiper_title title">Furniture collection</h1>
-                        <p class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
+                </div>
+                <div class="swiper-slide">
+                    <div class="swiper_block">
+                        <div class="swiper_img">
+                            <img src="image/home/slider/slide1.png" alt="slide_photo">
+                        </div>
+                        <div class="swiper_content">
+                            <h1 class="swiper_title title">Furniture collection</h1>
+                            <p class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="swiper_block">
+                        <div class="swiper_img">
+                            <img src="image/home/slider/slide1.png" alt="slide_photo">
+                        </div>
+                        <div class="swiper_content">
+                            <h1 class="swiper_title title">Furniture collection</h1>
+                            <p class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="swiper-slide">
-                <div class="swiper_block">
-                    <div class="swiper_img">
-                        <img src="image/home/slider/slide1.png" alt="slide_photo">
-                    </div>
-                    <div class="swiper_content">
-                        <h1 class="swiper_title title">Furniture collection</h1>
-                        <p class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="swiper_block">
-                    <div class="swiper_img">
-                        <img src="image/home/slider/slide1.png" alt="slide_photo">
-                    </div>
-                    <div class="swiper_content">
-                        <h1 class="swiper_title title">Furniture collection</h1>
-                        <p class="swiper_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
-                    </div>
-                </div>
-            </div>
+            <div class="swiper-pagination"></div>
         </div>
-        <div class="swiper-pagination"></div>
     </div>
 </section>
 
 <section class="furniture">
-
-    <div class="furniture_info">
-        <h2 class="furniture_info_title title">Furniture new collection</h2>
-        <p class="furniture_info_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
-    </div>
-    <div class="furniture_content">
-        <div class="furniture_img_block">
-            <img class="furniture_img" src="image/home/furniture/furniture1.jpg" alt="furniture">
-            <div class="furniture_white"></div>
-            <div class="furniture_img_hover">
-                <div class="furniture_img_title title">Truffaut literally trust</div>
-                <div class="furniture_img_text">Living room furniture | Chair</div>
-            </div>
+    <div class="container_fluid">
+        <div class="furniture_info">
+            <h2 class="furniture_info_title title">Furniture new collection</h2>
+            <p class="furniture_info_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint</p>
         </div>
-        <div class="furniture_img_block">
-            <img class="furniture_img" src="image/home/furniture/furniture2.jpg" alt="furniture">
-            <div class="furniture_white"></div>
-            <div class="furniture_img_hover">
-                <div class="furniture_img_title title">Truffaut literally trust</div>
-                <div class="furniture_img_text">Living room furniture | Chair</div>
+        <div class="furniture_content">
+            <div class="furniture_img_block">
+                <img class="furniture_img" src="image/home/furniture/furniture1.jpg" alt="furniture">
+                <div class="furniture_white"></div>
+                <div class="furniture_img_hover">
+                    <div class="furniture_img_title title">Truffaut literally trust</div>
+                    <div class="furniture_img_text">Living room furniture | Chair</div>
+                </div>
             </div>
-        </div>
-        <div class="furniture_img_block">
-            <img class="furniture_img" src="image/home/furniture/furniture3.jpg" alt="furniture">
-            <div class="furniture_white"></div>
-            <div class="furniture_img_hover">
-                <div class="furniture_img_title title">Truffaut literally trust</div>
-                <div class="furniture_img_text">Living room furniture | Chair</div>
+            <div class="furniture_img_block">
+                <img class="furniture_img" src="image/home/furniture/furniture2.jpg" alt="furniture">
+                <div class="furniture_white"></div>
+                <div class="furniture_img_hover">
+                    <div class="furniture_img_title title">Truffaut literally trust</div>
+                    <div class="furniture_img_text">Living room furniture | Chair</div>
+                </div>
             </div>
-        </div>
-        <div class="furniture_img_block">
-            <img class="furniture_img" src="image/home/furniture/furniture4.jpg" alt="furniture">
-            <div class="furniture_white"></div>
-            <div class="furniture_img_hover">
-                <div class="furniture_img_title title">Truffaut literally trust</div>
-                <div class="furniture_img_text">Living room furniture | Chair</div>
+            <div class="furniture_img_block">
+                <img class="furniture_img" src="image/home/furniture/furniture3.jpg" alt="furniture">
+                <div class="furniture_white"></div>
+                <div class="furniture_img_hover">
+                    <div class="furniture_img_title title">Truffaut literally trust</div>
+                    <div class="furniture_img_text">Living room furniture | Chair</div>
+                </div>
             </div>
-        </div>
-        <div class="furniture_img_block">
-            <img class="furniture_img" src="image/home/furniture/furniture5.jpg" alt="furniture">
-            <div class="furniture_white"></div>
-            <div class="furniture_img_hover">
-                <div class="furniture_img_title title">Truffaut literally trust</div>
-                <div class="furniture_img_text">Living room furniture | Chair</div>
+            <div class="furniture_img_block">
+                <img class="furniture_img" src="image/home/furniture/furniture4.jpg" alt="furniture">
+                <div class="furniture_white"></div>
+                <div class="furniture_img_hover">
+                    <div class="furniture_img_title title">Truffaut literally trust</div>
+                    <div class="furniture_img_text">Living room furniture | Chair</div>
+                </div>
+            </div>
+            <div class="furniture_img_block">
+                <img class="furniture_img" src="image/home/furniture/furniture5.jpg" alt="furniture">
+                <div class="furniture_white"></div>
+                <div class="furniture_img_hover">
+                    <div class="furniture_img_title title">Truffaut literally trust</div>
+                    <div class="furniture_img_text">Living room furniture | Chair</div>
+                </div>
             </div>
         </div>
     </div>
 </section>
 
 <section class="decor">
-    <div class="container">
-        <div class="decor_content">
-            <div class="decor_title">Aesthetic ethical drinking</div>
-            <p class="decor_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Artlyft ethical the one drinking vinegar austint</p>
+    <div class="container_fluid">
+        <div class="decor_inner">
+            <div class="decor_content">
+                <div class="decor_title title">Aesthetic ethical drinking</div>
+                <p class="decor_text">Deep v you probably haven't heard of them banh mi synth actually affogato. Artlyft ethical the one drinking vinegar austint</p>
+            </div>
         </div>
     </div>
 </section>
