--- a/About.html
+++ b/About.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>About</title>
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" type="image/png" sizes="92x92" href="Favicon/1111111.png">
-  <link rel="StyleSheet" href="Style/About/About.css">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/png" sizes="92x92" href="Favicon/1111111.png">
+    <link rel="StyleSheet" href="Style/About/About.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-
-  <link
-          rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
-  />
+    <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
 
 </head>
 <body>
@@ -24,15 +23,15 @@
 <header class="header">
   <nav class="nav">
     <div class="nav_block">
-      <a class="nav_block_content" id="web-active" href="#" >About</a>
-      <a class="nav_block_content" href="#" >Gallery</a>
+      <a class="nav_block_content" id="web-active" href="/About.html" >About</a>
+      <a class="nav_block_content" href="/Gallery.html" >Gallery</a>
     </div>
-    <a class="nav_img" href="/Home.html"><img src="image/logo.png" alt="logo"></a>
+    <a class="nav_img" href="/Home.html"><img src="image/header/logo.png" alt="logo"></a>
     <div class="nav_block">
       <a class="nav_block_content" href="#" >Blog</a>
       <a class="nav_block_content" href="#" >Contact</a>
       <button class="burger">
-        <img src="image/icon_menu.svg" class="burger_svg" alt="burger">
+        <img src="image/header/icon_menu.svg" class="burger_svg" alt="burger">
       </button>
     </div>
   </nav>
@@ -51,7 +50,7 @@
 <section class="About_info">
   <div class="container">
     <div class="About_info_block">
-      <div class="About_info_title title">Balance in the simple through an informed marriage of design, functional and craft</div>
+      <h1 class="About_info_title title">Balance in the simple through an informed marriage of design, functional and craft</h1>
       <div class="About_info_text">
         <p>Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock chillwave literally post-ironic ramps subway tile kitsch. Shaman tumblr fixie echo park street art. Enamel pin vaporware wayfarers, organic succulents hella sustainable cardigan.</p>
         <p>Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1 art party microdosing, put a bird on it brooklyn tilde distillery pork belly single-origin coffee tumblr quinoa copper mug. Affogato cold-pressed unicorn, viral intelligentsia leggings raw denim kombucha tote bag messenger bag chambray vape coloring book scenester. Activated charcoal wayfarers church-key tote bag synth brunch. Retro cornhole</p>
