--- a/Home.html
+++ b/Home.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Home</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" sizes="92x92" href="Favicon/1111111.png">
-    <title>Home</title>
     <link rel="StyleSheet" href="Style/Home/Home.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -24,14 +23,14 @@
         <nav class="nav">
             <div class="nav_block">
                 <a class="nav_block_content" href="/About.html" >About</a>
-                <a class="nav_block_content" href="#" >Gallery</a>
+                <a class="nav_block_content" href="/Gallery.html" >Gallery</a>
             </div>
-            <a class="nav_img" href="/Home.html"><img src="image/logo.png" alt="logo"></a>
+            <a class="nav_img" href="/Home.html"><img src="image/header/logo.png" alt="logo"></a>
             <div class="nav_block">
                 <a class="nav_block_content" href="#" >Blog</a>
                 <a class="nav_block_content" href="#" >Contact</a>
                 <a href="/Home.html" class="burger">
-                    <img src="image/icon_menu.svg" class="burger_svg" alt="burger">
+                    <img src="image/header/icon_menu.svg" class="burger_svg" alt="burger">
                 </a>
             </div>
         </nav>
@@ -202,72 +201,72 @@
     <div class="container_fluids">
         <div class="tabs">
 
-            <nav class="works_nav">
-                <button class="works_nav_link">Bedroom furniture</button>
-                <button class="works_nav_link active">Living room furniture</button>
-                <button class="works_nav_link">Office furniture</button>
-                <button class="works_nav_link">Dining room furniture</button>
-                <button class="works_nav_link">Chair</button>
+            <nav class="work_nav">
+                <button class="work_nav_link">Bedroom furniture</button>
+                <button class="work_nav_link active">Living room furniture</button>
+                <button class="work_nav_link">Office furniture</button>
+                <button class="work_nav_link">Dining room furniture</button>
+                <button class="work_nav_link">Chair</button>
             </nav>
             <div class="tabs_content">
 
-                <div class="works_block">
-                    <div class="works_big_block">
-                        <img class="works_img" src="image/home/works/big_image.jpg" alt="works">
+                <div class="work_block">
+                    <div class="work_big_block">
+                        <img class="work_img" src="image/home/work/big_image.jpg" alt="work">
                     </div>
                     <div class="works_small_block">
-                        <img class="works_img" src="image/home/works/small_img_1.jpg" alt="works">
-                        <img class="works_img" src="image/home/works/small_img_2.jpg" alt="works">
-                        <img class="works_img" src="image/home/works/small_img_3.jpg" alt="works">
-                        <img class="works_img" src="image/home/works/small_img_4.jpg" alt="works">
+                        <img class="work_img" src="image/home/work/small_img_1.jpg" alt="work">
+                        <img class="work_img" src="image/home/work/small_img_2.jpg" alt="work">
+                        <img class="work_img" src="image/home/work/small_img_3.jpg" alt="work">
+                        <img class="work_img" src="image/home/work/small_img_4.jpg" alt="work">
                     </div>
                 </div>
 
-                <div class="works_block active">
-                    <div class="works_big_block">
-                        <img class="works_img" src="image/home/works/big_image.jpg" alt="works">
+                <div class="work_block active">
+                    <div class="work_big_block">
+                        <img class="work_img" src="image/home/work/big_image.jpg" alt="works">
                     </div>
-                        <div class="works_small_block">
-                            <img class="works_img" src="image/home/works/small_img_1.jpg" alt="works">
-                            <img class="works_img" src="image/home/works/small_img_3.jpg" alt="works">
-                            <img class="works_img" src="image/home/works/small_img_4.jpg" alt="works">
-                            <img class="works_img" src="image/home/works/small_img_2.jpg" alt="works">
+                        <div class="work_small_block">
+                            <img class="work_img" src="image/home/work/small_img_1.jpg" alt="work">
+                            <img class="work_img" src="image/home/work/small_img_3.jpg" alt="work">
+                            <img class="work_img" src="image/home/work/small_img_4.jpg" alt="work">
+                            <img class="work_img" src="image/home/work/small_img_2.jpg" alt="work">
                         </div>
                 </div>
 
-                <div class="works_block">
-                    <div class="works_big_block">
-                        <img class="works_img" src="image/home/works/big_image.jpg" alt="works">
+                <div class="work_block">
+                    <div class="work_big_block">
+                        <img class="work_img" src="image/home/work/big_image.jpg" alt="works">
                     </div>
-                    <div class="works_small_block">
-                        <img class="works_img" src="image/home/works/small_img_1.jpg" alt="works">
-                        <img class="works_img" src="image/home/works/small_img_4.jpg" alt="works">
-                        <img class="works_img" src="image/home/works/small_img_2.jpg" alt="works">
-                        <img class="works_img" src="image/home/works/small_img_3.jpg" alt="works">
-                    </div>
-                </div>
-
-                <div class="works_block">
-                    <div class="works_big_block">
-                        <img class="works_img" src="image/home/works/big_image.jpg" alt="works">
-                    </div>
-                    <div class="works_small_block">
-                        <img class="works_img" src="image/home/works/small_img_4.jpg" alt="works">
-                        <img class="works_img" src="image/home/works/small_img_1.jpg" alt="works">
-                        <img class="works_img" src="image/home/works/small_img_2.jpg" alt="works">
-                        <img class="works_img" src="image/home/works/small_img_3.jpg" alt="works">
+                    <div class="work_small_block">
+                        <img class="work_img" src="image/home/work/small_img_1.jpg" alt="work">
+                        <img class="work_img" src="image/home/work/small_img_4.jpg" alt="work">
+                        <img class="work_img" src="image/home/work/small_img_2.jpg" alt="work">
+                        <img class="work_img" src="image/home/work/small_img_3.jpg" alt="work">
                     </div>
                 </div>
 
-                <div class="works_block">
-                    <div class="works_big_block">
-                        <img class="works_img" src="image/home/works/big_image.jpg" alt="works">
+                <div class="work_block">
+                    <div class="work_big_block">
+                        <img class="work_img" src="image/home/work/big_image.jpg" alt="work">
                     </div>
-                    <div class="works_small_block">
-                        <img class="works_img" src="image/home/works/small_img_3.jpg" alt="works">
-                        <img class="works_img" src="image/home/works/small_img_1.jpg" alt="works">
-                        <img class="works_img" src="image/home/works/small_img_2.jpg" alt="works">
-                        <img class="works_img" src="image/home/works/small_img_4.jpg" alt="works">
+                    <div class="work_small_block">
+                        <img class="work_img" src="image/home/work/small_img_4.jpg" alt="work">
+                        <img class="work_img" src="image/home/work/small_img_1.jpg" alt="work">
+                        <img class="work_img" src="image/home/work/small_img_2.jpg" alt="work">
+                        <img class="work_img" src="image/home/work/small_img_3.jpg" alt="work">
+                    </div>
+                </div>
+
+                <div class="work_block">
+                    <div class="work_big_block">
+                        <img class="work_img" src="image/home/work/big_image.jpg" alt="work">
+                    </div>
+                    <div class="work_small_block">
+                        <img class="work_img" src="image/home/work/small_img_3.jpg" alt="work">
+                        <img class="work_img" src="image/home/work/small_img_1.jpg" alt="work">
+                        <img class="work_img" src="image/home/work/small_img_2.jpg" alt="work">
+                        <img class="work_img" src="image/home/work/small_img_4.jpg" alt="work">
                     </div>
                 </div>
 
