complete Single post

--- a/Gallery.html
+++ b/Gallery.html
@@ -143,7 +143,9 @@
                         <label>
                             <input class="footer_contact_subscribe_input" type="email" placeholder="Subscribe by email">
                         </label>
-                        <button class="footer_contact_subscribe_btn">Send</button>
+                        <label>
+                            <input value="Send" type="submit" class="footer_contact_subscribe_btn">
+                        </label>
                     </div>
                 </div>
                 <div class="footer_social">
