--- a/Home.html
+++ b/Home.html
@@ -287,8 +287,8 @@
                         <img src="image/home/blog/blog_1.jpg" alt="blog">
                     </div>
                     <div class="ideas_blog_description">
-                        <div class="ideas_blog_description_date">March 12, 2020</div>
-                        <div class="ideas_blog_description_author">by Ann Summers </div>
+                        <span class="ideas_blog_description_date">March 12, 2020</span>
+                        <a href="#" class="ideas_blog_description_author">by Ann Summers </a>
                         <div class="ideas_blog_description_design">Inrerior</div>
                     </div>
                     <div class="ideas_blog_text title">Listicle actually selvage activated charcoal for the drinking vinegar </div>
@@ -299,8 +299,8 @@
                         <img src="image/home/blog/blog_2.jpg" alt="blog">
                     </div>
                     <div class="ideas_blog_description">
-                        <div class="ideas_blog_description_date">September 28,2020</div>
-                        <div class="ideas_blog_description_author">by Finnagan Morningstar</div>
+                        <span class="ideas_blog_description_date">September 28,2020</span>
+                        <a href="#" class="ideas_blog_description_author">by Finnagan Morningstar</a>
                         <div class="ideas_blog_description_design">Dining room interior</div>
                     </div>
                     <div class="ideas_blog_text title">Red selfies edison bulb four dollar toast humblebrag</div>
@@ -328,7 +328,9 @@
                         <label>
                         <input class="footer_contact_subscribe_input" type="email" placeholder="Subscribe by email">
                         </label>
-                        <button class="footer_contact_subscribe_btn">Send</button>
+                        <label>
+                            <input value="Send" type="submit" class="footer_contact_subscribe_btn">
+                        </label>
                     </div>
                 </div>
                 <div class="footer_social">
