--- a/Single_post.html
+++ b/Single_post.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Blog</title>
+    <title>Single Post</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" sizes="92x92" href="Favicon/1111111.png">
-    <link rel="StyleSheet" href="Style/Blog/Blog.css">
+    <link rel="StyleSheet" href="Style/Single_post/Single_post.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:ital,wght@0,400;0,600;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
     <link
             rel="stylesheet"
@@ -36,7 +36,7 @@
     </nav>
 </header>
 
-<div class="breadcrumbs">Home/ Blog</div>
+<div class="breadcrumbs">Home/ Blog/ Single Post</div>
 
 <section class="blog">
     <div class="container">
@@ -54,71 +54,92 @@
                         </div>
                         <div class="blog_content_info">
                             <div class="blog_content_info_title title">Red selfies edison bulb four dollar toast humblebrag for the furniture</div>
-                            <div class="blog_content_info_text">Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel pin edison bulb farm-to-table</div>
+                            <p class="blog_content_info_text">Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel pin edison bulb farm-to-table</p>
+                            <p class="blog_content_info_text">Yuccie portland kickstarter, readymade ramps humblebrag ennui banjo mumblecore vaporware pickled cray stumptown 8-bit mlkshk. Tumeric tousled austin, kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche. Tousled yr williamsburg austin edison bulb cloud bread vegan street art. Locavore food truck trust fund palo santo asymmetrical, franzen deep v marfa kogi whatever swag pop-up seitan.</p>
                         </div>
                     </div>
                     <div class="blog_quote">
                         <div class="blog_quote_text">“Simplicity is not the goal. It is the by-product of a good idea and modest expectations”</div>
                         <div class="blog_quote_author title">Paul Rand</div>
                     </div>
-                    <div class="blog_video">
-                        <a href="https://www.youtube.com">
-                            <div class="blog_video_block">
-                                <div class="blog_video_play_bg">
-                                    <img class="blog_video_play_button" src="image/blog/page/play_btn.svg" alt="video_button">
-                                </div>
-                                <img class="blog_video_img" src="/image/blog/page/video.jpg" alt="video_bg">
-                            </div>
-                        </a>
-                        <div class="blog_description">
-                            <span class="blog_description_date">August 12, 2020</span>
-                            <a class="blog_description_author">by Lux Morningstar</a>
-                            <div class="blog_description_design">Design</div>
-                        </div>
-                        <div class="blog_content_info">
-                            <div class="blog_content_info_title title">Authentic kogi shabby chic</div>
-                        </div>
-
+                    <div class="blog_content_info">
+                        <p class="blog_content_info_text">Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel pin edison bulb farm-to-table.
+                        Yuccie portland kickstarter, readymade ramps humblebrag ennui banjo mumblecore vaporware pickled cray stumptown 8-bit mlkshk. Tumeric tousled austin, kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche. Tousled yr williamsburg austin edison bulb cloud bread vegan street art. Locavore food truck trust fund palo santo asymmetrical, franzen deep v marfa kogi whatever swag pop-up seitan.</p>
                     </div>
-                    <div class="blog_swiper">
+                    <div class="blog_tags">
+                        <div class="blog_tags_title title">Tags</div>
+                        <a class="blog_tags_link" href="#">Bedroom furniture</a>
+                        <a class="blog_tags_link" href="#">Office furniture</a>
+                        <a class="blog_tags_link" href="#">Dining furniture</a>
+                        <a class="blog_tags_link" href="#">Chair</a>
+                    </div>
+                    <div class="blog_previous">
                         <div class="swiper mySwiper">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <img src="/image/blog/page/slider_img1.jpg" alt="blog_swiper_img">
+                                <div class="swiper-slide blog_previous_content">
+                                    <div class="blog_previous_block blog_previous_block_left">
+                                        <div class="blog_previous_text">Cred selfies edison bulb four dollar toast humblebrag</div>
+                                    </div>
+                                    <div class="blog_previous_block blog_previous_block_right">
+                                        <div class="blog_previous_text">Semiotics fixie four dollar toast, next level</div>
+                                    </div>
                                 </div>
-                                <div class="swiper-slide">
-                                    <img src="/image/blog/page/slider_img1.jpg" alt="blog_swiper_img">
+                                <div class="swiper-slide blog_previous_content">
+                                    <div class="blog_previous_block blog_previous_block_left">
+                                        <div class="blog_previous_text">Cred selfies edison bulb four dollar toast humblebrag</div>
+                                    </div>
+                                    <div class="blog_previous_block blog_previous_block_right">
+                                        <div class="blog_previous_text">Semiotics fixie four dollar toast, next level</div>
+                                    </div>
                                 </div>
-                                <div class="swiper-slide">
-                                    <img src="/image/blog/page/slider_img1.jpg" alt="blog_swiper_img">
+                                <div class="swiper-slide blog_previous_content">
+                                    <div class="blog_previous_block blog_previous_block_left">
+                                        <div class="blog_previous_text">Cred selfies edison bulb four dollar toast humblebrag</div>
+                                    </div>
+                                    <div class="blog_previous_block blog_previous_block_right">
+                                        <div class="blog_previous_text">Semiotics fixie four dollar toast, next level</div>
+                                    </div>
                                 </div>
+
                             </div>
-                            <div class="swiper-custom-button-next">
-                                <img class="swiper_arrow" src="image/blog/page/slider_arrow.png" alt="swiper_arrow">
-                            </div>
-                            <div class="swiper-custom-button-prev" id="swiper_arrow_prev">
-                                <img class="swiper_arrow" src="image/blog/page/slider_arrow.png" alt="swiper_arrow">
-                            </div>
-                        </div>
-                        <div class="blog_description">
-                            <span class="blog_description_date">August 18, 2020</span>
-                            <a class="blog_description_author">by Ann Summers </a>
-                            <div class="blog_description_design">Table Furniture</div>
-                        </div>
-                        <div class="blog_content_info">
-                            <div class="blog_content_info_title title">Semiotics fixie four dollar toast, next level woke</div>
-                            <div class="blog_content_info_text">Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel pin edison bulb farm-to-table</div>
+                            <div class="swiper-custom-button-next swiper-custom-button"><img src="image/single_post/arrow.png" alt="arrow_swiper"> </div>
+                            <div class="swiper-custom-button-prev swiper-custom-button"><img src="image/single_post/arrow.png" alt="arrow_swiper"> </div>
                         </div>
                     </div>
-                </div>
-                <div class="blog_page_number">
-                    <div class="blog_page_number_arrow blog_page_number_arrow_disable">
-                        <img src="image/blog/page/arrow.svg" alt="arrow">
+                    <div class="blog_comments">
+                        <div class="blog_comments_title title">Comments</div>
+                        <div class="blog_comments_content">
+                            <div class="blog_comments_author"><img src="image/single_post/author_comments.png" alt="author"> </div>
+
+                            <div class="blog_comments_content_block">
+                                <div class="blog_comments_content_author_info">
+                                    <div class="blog_comments_content_author_block">
+                                        <a href="#" class="blog_comments_content_author_name">Lea Brown</a>
+                                        <span class="blog_comments_content_author_date">August 12, 2020</span>
+                                    </div>
+                                    <div class="blog_comments_author_reply">Reply</div>
+                                </div>
+                                <p class="blog_comments_content_block_text">Tumeric tousled austin, kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche</p>
+                            </div>
+                        </div>
                     </div>
-                    <span class="blog_page_number_number blog_page_number_number_active">1</span>
-                    <a href="#" class="blog_page_number_number">2</a>
-                    <div class="blog_page_number_arrow">
-                        <img src="image/blog/page/arrow.svg" alt="arrow">
+                    <div class="blog_comment">
+                        <div class="blog_comment_title title">Post a Comment</div>
+                        <div class="blog_comment_input">
+                            <label>
+                                <textarea class="blog_comment_input_text" placeholder="Your comment"></textarea>
+                            </label>
+                            <label class="blog_comment_input_label">
+                                <input class="blog_comment_input_info" placeholder="Your name" type="text" name="username">
+                                <input class="blog_comment_input_info" placeholder="Your e-mail" type="email">
+                            </label>
+                            <label class="blog_comment_input_checkbox_label" onmousedown="return false">
+                                <input class="blog_comment_input_checkbox" type="checkbox"> Remember me
+                            </label>
+                            <label>
+                                <input class="blog_comment_input_submit" type="submit" value="Submit">
+                            </label>
+                        </div>
                     </div>
                 </div>
 
